Changelog
=========


2.2.2 (unreleased)
------------------

- SearchableTextExtender: Don't just decode the Content-Transfer-Encoding,
  but also decode the actual content itself with the declared charset.
  [lgraf]


2.2.1 (2014-05-30)
------------------

- Fix brown bag upgrade step from 2.2.0.
  [jone]


2.2.0 (2014-05-28)
------------------

- Performance improvements:

  - Store the title from the mail subject on the object, so that
    we don't have to read the message for retreiving the title on access.
  - Cache attachment infos on mail object.
  - Cache headers for tabbed view.

  [jone]

- Make sure only a *default* value will be set for IMailSettings.mail_domain,
  but an existing value won't be overwritten when running the upgrade step twice.
  [lgraf]


2.1.1 (2014-05-12)
------------------

- Inbound view: Adapt container as the context instead of content when
  looking up default value adapter.
  [lgraf]

- Inbound view: Remove AQ wrapper when setting default values for newly
  created objects, in order to not get bogus results (due to acquisition)
  when checking whether a field is already present on the object.
  [lgraf]

- Fix From-/To-/Cc-Header encoding problem with Apple Mail.
  [jone]

- Made primary field also for dexterity-1 installations working.
  [phgross]

- Added French translation by I. Anthenien.
  [lknoepfel]

2.1.0 (2014-03-28)
------------------

- Remove "validate_sender" configuration setting.
  We always require the sender to be valid.
  [jone]

- Refactor inbound view so that customization and error-handling
  is easier possible.
  [jone]

- Improve searchable text to index attachments recursively.
  [jone]

- Added registry entry 'mail_domain' in upgrade step to 2000.
  [lknoepfel]

- Fix tests for Plone 4.1.x - 4.2.x by using a compatible ftw.workspace
  version.
  [mathias.leimgruber]


2.0 (2013-10-21)
----------------

- Make mail tab date parsing robust.
  [jone]
